[package]
name = "coulomb"
version = "0.3.0"
edition = "2021"
rust-version = "1.77"
description = "Library for electrolytes and electrostatic interactions"
license = "Apache-2.0"
repository = "https://github.com/mlund/coulomb"
documentation = "https://docs.rs/coulomb"
authors = ["Mikael Lund"]
readme = "README.md"
categories = ["science"]
keywords = ["electrolytes", "electrostatics", "simulation", "multipoles", "chemistry"]

[dependencies]
anyhow = "1.0"
mint = "0.5"
nalgebra = { version = "0.34.1", default-features = false, features = ["std", "mint"] }
num-integer = "0.1"
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
uom = { version = "0.36", optional = true, features = ["si", "f64"], default-features = false }

[features]
default = ["uom"]
uom = ["dep:uom", "dep:num-traits"]
serde = ["dep:serde"]

[dev-dependencies]
approx = "0.5"
image = "0.25"
colorgrad = "0.6"

# See https://github.com/victe/rust-latex-doc-minimal-example
# for including math in the documentation:
# export RUSTDOCFLAGS="--html-in-header coulomb/src/docs-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
